[tool.poetry]
name = "python-115"
version = "0.0.9.7.4.7.3"
description = "Python wrapper for 115 webdisk."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-115-client"
repository = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-115-client"
keywords = ["115", "client"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11"
cachetools = "*"
ecdsa = "*"
glob_pattern = "*"
http_response = "*"
httpx = "*"
httpx_request = ">=0.0.8.2"
lz4 = "*"
magnet2torrent = "*"
multidict = "*"
orjson = "*"
posixpatht = ">=0.0.2.1"
pycryptodome = "*"
python-asynctools = ">=0.0.4"
python-concurrenttools = ">=0.0.3"
python-cookietools = ">=0.0.2"
python-download = ">=0.0.3"
python-filewrap = ">=0.1.2"
python-hashtools = "*"
python-httpfile = ">=0.0.1.3"
python-http_request = ">=0.0.6"
python-iterutils = ">=0.0.7"
python-startfile = ">=0.0.2"
python-texttools = ">=0.0.2"
python-urlopen = ">=0.0.6"
python-undefined = "*"
qrcode = "*"
rich = "*"
yarl = "*"

[tool.poetry.scripts]
python-115 = "p115.__main__:main"
p115 = "p115.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115"
