[tool.poetry]
name = "python-115"
version = "0.0.9.8.5"
description = "Python wrapper for 115 webdisk."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-115-client"
repository = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-115-client"
keywords = ["115", "webdisk", "client"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11"
glob_pattern = "*"
httpx = "*"
httpx_request = ">=0.0.8.2"
magnet2torrent = "*"
orjson = "*"
p115client = ">=0.0.3.7.5"
posixpatht = ">=0.0.3"
python-asynctools = ">=0.0.4"
python-concurrenttools = ">=0.0.3"
python-dictattr = ">=0.0.4"
python-download = ">=0.0.3"
python-filewrap = ">=0.2"
python-hashtools = ">=0.0.3.3"
python-httpfile = ">=0.0.4"
python-http_request = ">=0.0.6"
python-iterutils = ">=0.0.7.1"
python-texttools = ">=0.0.2"
python-urlopen = ">=0.0.6"
python-undefined = "*"
rich = "*"
yarl = "*"

[tool.poetry.scripts]
python-115 = "p115.__main__:main"
p115 = "p115.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115"
