[tool.poetry]
name = "python-alist"
version = "0.0.13.5.2.1"
description = "Python wrapper for alist."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-wrap-alist-web-api"
repository = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-wrap-alist-web-api"
keywords = ["alist"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11"
glob_pattern = "*"
http_response = "*"
httpx = "*"
httpx_request = ">=0.0.8.2"
multidict = "*"
path_ignore_pattern = "*"
pycryptodome = "*"
python-argtools = "*"
python-asynctools = ">=0.0.4"
python-dateutil = "*"
python-download = ">=0.0.3"
python-filewrap = ">=0.1.1"
python-httpfile = ">=0.0.1.3"
python-http_request = ">=0.0.6"
python-iterutils = ">=0.0.7"
python-undefined = "*"
yarl = "*"

[tool.poetry.scripts]
python-alist = "alist.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "alist"
