[tool.poetry]
name = "clouddrive"
version = "0.0.12.1.2"
description = "Python wrapper for CloudDrive."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-wrap-clouddrive-web-api"
repository = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-wrap-clouddrive-web-api"
keywords = ["nas", "clouddrive"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.10"
glob_pattern = "*"
grpcio = "*"
grpcio-tools = "*"
grpclib = "*"
"grpclib[protobuf]" = "*"
http_response = "*"
path_ignore_pattern = "*"
protobuf = "*"
python-dateutil = "*"
python-filewrap = ">=0.1"
python-httpfile = "*"
python-urlopen = "*"
yarl = "*"

[tool.poetry.scripts]
python-clouddrive = "clouddrive.__main__:main"
clouddrive = "clouddrive.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "clouddrive"
