[tool.poetry]
name = "blacksheep_client_request"
version = "0.0.4"
description = "blacksheep request extension."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-module/blacksheep_client_request"
repository = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-module/blacksheep_client_request"
keywords = ["blacksheep", "request"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
blacksheep = "*"
brotli = "*"
http_response = "*"
multidict = "*"
python-asynctools = ">=0.0.4"
python-argtools = "*"
python-cookietools = ">=0.0.4"
python-filewrap = "*"
zstandard = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "blacksheep_client_request"
