[tool.poetry]
name = "p115client"
version = "0.0.1"
description = "Python 115 webdisk client."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-module/p115client"
repository = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-module/p115client"
keywords = ["115", "webdisk", "client"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11"
ed2k = ">=0.0.1"
http_response = "*"
httpx = "*"
httpx_request = ">=0.0.8.3"
multidict = "*"
orjson = "*"
p115cipher = ">=0.0.2.2"
pycryptodome = "*"
python-asynctools = ">=0.0.4"
python-cookietools = ">=0.0.2"
python-dictattr = ">=0.0.4"
python-filewrap = ">=0.2.2"
python-hashtools = ">=0.0.3.3"
python-httpfile = ">=0.0.4"
python-http_request = ">=0.0.6"
python-iterutils = ">=0.0.7.1"
python-startfile = ">=0.0.2"
python-urlopen = ">=0.0.6"
qrcode = "*"
yarl = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115client"
