[tool.poetry]
name = "p115qrcode"
version = "0.0.1"
description = "115 网盘二维码扫码登录."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-module/p115qrcode"
repository = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-module/p115qrcode"
keywords = ["python-115", "qrcode"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11"
orjson = "*"
httpx = "*"
httpx_request = ">=0.0.9"
python-startfile = ">=0.0.2"
qrcode = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115qrcode"
