[tool.poetry]
name = "p115servedb"
version = "0.0.2"
description = "115 网盘基于 updatedb.py 的列表服务."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-module/p115servedb"
repository = "https://github.com/ChenyangGao/web-mount-packs/tree/main/python-module/p115servedb"
keywords = ["python-115", "servedb"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11"
a2wsgi = ">=1.10.7"
blacksheep = "*"
blacksheep_client_request = ">=0.0.2"
fusepy = "*"
python-encode_uri = ">=0.0.1"
python-httpfile = ">=0.0.5"
python-property = ">=0.0.3"
p115client = ">=0.0.3.7.12"
path_predicate = ">=0.0.1.1"
pyyaml = "*"
urllib3 = "*"
uvicorn = "*"
wsgidav = "*"

[tool.poetry.scripts]
p115servedb = "p115servedb.__main__:main"
servedb = "p115servedb.__main__:main"
servedb-dav = "p115servedb.dav:main"
servedb-fuse = "p115servedb.fuse:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115servedb"
